# SpaceColonies

./: CMakeLists.txt  dump.cpp  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: CelestialBody.h  Constants.h  Game.h  SpaceCraft.h  SpaceObject.h  Utils.h
src/: CelestialBody.cpp  Game.cpp  SpaceCraft.cpp  SpaceObject.cpp
